design/styles.css
section {
  display: grid;
  max-width: 1000px;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

h3 {
  justify-content: left;
}

.card {
  display: flex;
  flex-direction: column;
  padding: 1.5em 2em;
}

.card:nth-child(1) {
  background-color: hsl(31, 77%, 52%);
  color: white;
}

.card:nth-child(2) {
  background-color: hsl(184, 100%, 22%);
  color: white;
}

.card:nth-child(3) {
  background-color: hsl(179, 100%, 13%);
  color: white;
}

button {
  background-color: white;
  width: 50%;
  padding: 6px;
  justify-content: left;
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

/* @media screen and (min-width: 799px) {
  section {
    grid-template-columns: repeat(3, 1fr);
  }
} */

